footer div margin added to avoid overlap with bottom left graphic

--- a/css/vct.css
+++ b/css/vct.css
@@ -193,6 +193,9 @@ footer {
     position: fixed;
     bottom: 0;
 }
+footer div {
+    margin: 0 6vw 0 6vw;
+}
 
 /* social media icons */
 
